src/objects/AcctSeed__Financial_Cube__c.object
<CustomObject>
    <description>Used to sum transaction records across various dimensions for reporting. Transactions which map to the same gl account, accounting period, ledger, and GL account variables are aggregated by financial cube for the purpose of generating financial reports.</description>
    <fields>
        <fullName>AcctSeed__Accounting_Period_Status__c</fullName>
        <formula>TEXT(AcctSeed__Accounting_Period__r.AcctSeed__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accounting Period Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Period</label>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Financial Cubes</relationshipLabel>
        <relationshipName>Financial_Cubes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The amount for the current period</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Archived_Amount__c</fullName>
        <label>Archived Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cube_Type__c</fullName>
        <inlineHelpText>All budget cubes should have a value of “Current Period” other values are used for internal purposes only.</inlineHelpText>
        <label>Cube Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Period</fullName>
                    <default>true</default>
                    <label>Period</label>
                </value>
                <value>
                    <fullName>Current Year Earnings</fullName>
                </value>
                <value>
                    <fullName>Retained Earnings</fullName>
                </value>
                <value>
                    <fullName>Cash Flow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AcctSeed__Current_Period__c</fullName>
        <formula>IF(AcctSeed__Ledger_Type__c = &quot;Budget&quot;, AcctSeed__Amount__c,
IF(AcctSeed__Ledger_Type__c = &quot;Transactional&quot; &amp;&amp; AcctSeed__Accounting_Period_Status__c = &quot;Archived&quot;, AcctSeed__Amount__c,
IF(AcctSeed__Ledger_Type__c = &quot;Transactional&quot; &amp;&amp; TEXT(AcctSeed__Cube_Type__c) = &quot;Current Year Earnings&quot;, AcctSeed__Amount__c,
IF(AcctSeed__Ledger_Type__c = &quot;Transactional&quot; &amp;&amp; TEXT(AcctSeed__Cube_Type__c) = &quot;Retained Earnings&quot;, AcctSeed__Amount__c,
IF(AcctSeed__Ledger_Type__c = &quot;Transactional&quot; &amp;&amp; TEXT(AcctSeed__Cube_Type__c) = &quot;Cash Flow&quot;, AcctSeed__Transaction_Amount__c,
IF(AcctSeed__Ledger_Type__c = &quot;Transactional&quot; &amp;&amp; TEXT(AcctSeed__Cube_Type__c) = &quot;Period&quot;, AcctSeed__Transaction_Amount__c, 0

)
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Type__c</fullName>
        <formula>Text(AcctSeed__GL_Account__r.AcctSeed__Type__c)</formula>
        <label>GL Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Financial Cubes (GL Variable 1)</relationshipLabel>
        <relationshipName>Financial_Cubes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Financial Cubes (GL Variable 2)</relationshipLabel>
        <relationshipName>Financial_Cubes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger segment used for reporting of a business unit such as division or department.</inlineHelpText>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Financial Cubes (GL Variable 3)</relationshipLabel>
        <relationshipName>Financial_Cubes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>General Ledger Account.</inlineHelpText>
        <label>GL Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__GL_Account__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>Balance Sheet, Revenue, Expense</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Financial Cubes</relationshipLabel>
        <relationshipName>Financial_Cubes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Key_Group__c</fullName>
        <externalId>true</externalId>
        <label>Key Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger_Type__c</fullName>
        <formula>TEXT(AcctSeed__Ledger__r.AcctSeed__Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ledger Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Ledger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ledger</label>
        <referenceTo>AcctSeed__Ledger__c</referenceTo>
        <relationshipLabel>Financial Cubes</relationshipLabel>
        <relationshipName>Financial_Cubes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__MTD_Actual_P_L__c</fullName>
        <formula>IF(ISPICKVAL(AcctSeed__Ledger__r.AcctSeed__Type__c, &quot;Transactional&quot;),  AcctSeed__Transaction_Amount__c*-1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Actual (P&amp;L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__MTD_Budget_P_L__c</fullName>
        <formula>IF(ISPICKVAL( AcctSeed__Ledger__r.AcctSeed__Type__c , &quot;Budget&quot;), AcctSeed__Amount__c *-1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MTD Budget (P&amp;L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Opening_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The balance of the GL account and variable combination at the beginning of the accounting period</inlineHelpText>
        <label>Opening Balance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Type_1__c</fullName>
        <formula>Text(AcctSeed__GL_Account__r.AcctSeed__Sub_Type_1__c )</formula>
        <label>Sub Type 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Sub_Type_2__c</fullName>
        <formula>Text(AcctSeed__GL_Account__r.AcctSeed__Sub_Type_2__c)</formula>
        <label>Sub Type 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <summarizedField>AcctSeed__Financial_Cube_Transaction__c.AcctSeed__Amount__c</summarizedField>
        <summaryForeignKey>AcctSeed__Financial_Cube_Transaction__c.AcctSeed__Financial_Cube__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AcctSeed__YTD_Actual_P_L__c</fullName>
        <formula>IF(ISPICKVAL( AcctSeed__Ledger__r.AcctSeed__Type__c , &quot;Transactional&quot;), AcctSeed__Year_To_Date__c *-1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Actual (P&amp;L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__YTD_Budget_P_L__c</fullName>
        <formula>IF(ISPICKVAL( AcctSeed__Ledger__r.AcctSeed__Type__c , &quot;Budget&quot;), AcctSeed__Year_To_Date__c *-1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Budget (P&amp;L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Year_To_Date__c</fullName>
        <formula>AcctSeed__Opening_Balance__c + AcctSeed__Current_Period__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Year__c</fullName>
        <inlineHelpText>4 digit representation of the year. Example “2016”</inlineHelpText>
        <label>Year</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Financial Cube</label>
    <listViews>
        <fullName>AcctSeed__All</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Cube_Type__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Opening_Balance__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__GL_Account__c</columns>
        <columns>AcctSeed__GL_Account_Variable_1__c</columns>
        <columns>AcctSeed__GL_Account_Variable_2__c</columns>
        <columns>AcctSeed__GL_Account_Variable_3__c</columns>
        <columns>AcctSeed__GL_Account_Variable_4__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Archived</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Cube_Type__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Opening_Balance__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__GL_Account__c</columns>
        <columns>AcctSeed__GL_Account_Variable_1__c</columns>
        <columns>AcctSeed__GL_Account_Variable_2__c</columns>
        <columns>AcctSeed__GL_Account_Variable_3__c</columns>
        <columns>AcctSeed__GL_Account_Variable_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Archived_Amount__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Archived</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Budget</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Cube_Type__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Opening_Balance__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__GL_Account__c</columns>
        <columns>AcctSeed__GL_Account_Variable_1__c</columns>
        <columns>AcctSeed__GL_Account_Variable_2__c</columns>
        <columns>AcctSeed__GL_Account_Variable_3__c</columns>
        <columns>AcctSeed__GL_Account_Variable_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Ledger_Type__c</field>
            <operation>equals</operation>
            <value>Budget</value>
        </filters>
        <label>Financial Cube</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Current_Balances</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__Cube_Type__c</columns>
        <columns>AcctSeed__GL_Account__c</columns>
        <columns>AcctSeed__GL_Account_Variable_1__c</columns>
        <columns>AcctSeed__GL_Account_Variable_2__c</columns>
        <columns>AcctSeed__GL_Account_Variable_3__c</columns>
        <columns>AcctSeed__GL_Account_Variable_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Year__c</field>
            <operation>equals</operation>
        </filters>
        <label>Current Balances</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Current_Year_Earnings</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Cube_Type__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Opening_Balance__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__GL_Account__c</columns>
        <columns>AcctSeed__GL_Account_Variable_1__c</columns>
        <columns>AcctSeed__GL_Account_Variable_2__c</columns>
        <columns>AcctSeed__GL_Account_Variable_3__c</columns>
        <columns>AcctSeed__GL_Account_Variable_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Cube_Type__c</field>
            <operation>equals</operation>
            <value>Current Year Earnings</value>
        </filters>
        <label>Current Year Earnings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Period</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Cube_Type__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Opening_Balance__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__GL_Account__c</columns>
        <columns>AcctSeed__GL_Account_Variable_1__c</columns>
        <columns>AcctSeed__GL_Account_Variable_2__c</columns>
        <columns>AcctSeed__GL_Account_Variable_3__c</columns>
        <columns>AcctSeed__GL_Account_Variable_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Cube_Type__c</field>
            <operation>equals</operation>
            <value>Period</value>
        </filters>
        <label>Period</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__PeriodBalances</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Cube_Type__c</columns>
        <columns>AcctSeed__Year__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__GL_Account__c</columns>
        <columns>AcctSeed__GL_Account_Variable_1__c</columns>
        <columns>AcctSeed__GL_Account_Variable_2__c</columns>
        <columns>AcctSeed__GL_Account_Variable_3__c</columns>
        <columns>AcctSeed__GL_Account_Variable_4__c</columns>
        <columns>AcctSeed__Transaction_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Cube_Type__c</field>
            <operation>equals</operation>
            <value>Period</value>
        </filters>
        <label>Period Balances</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Retained_Earnings</fullName>
        <columns>NAME</columns>
        <columns>AcctSeed__Cube_Type__c</columns>
        <columns>AcctSeed__Ledger__c</columns>
        <columns>AcctSeed__Accounting_Period__c</columns>
        <columns>AcctSeed__Opening_Balance__c</columns>
        <columns>AcctSeed__Amount__c</columns>
        <columns>AcctSeed__GL_Account__c</columns>
        <columns>AcctSeed__GL_Account_Variable_1__c</columns>
        <columns>AcctSeed__GL_Account_Variable_2__c</columns>
        <columns>AcctSeed__GL_Account_Variable_3__c</columns>
        <columns>AcctSeed__GL_Account_Variable_4__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Cube_Type__c</field>
            <operation>equals</operation>
            <value>Retained Earnings</value>
        </filters>
        <label>Retained Earnings</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FC-{00000}</displayFormat>
        <label>Financial Cube Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Cubes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Cube_Type_Is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(AcctSeed__Cube_Type__c))</errorConditionFormula>
        <errorDisplayField>AcctSeed__Cube_Type__c</errorDisplayField>
        <errorMessage>You must enter a cube type</errorMessage>
    </validationRules>
</CustomObject>